--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "multer": "^1.4.7",
+    "multer": "1.4.5-lts.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
