--- a/client/package.json
+++ b/client/package.json
@@ -14,9 +14,10 @@
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
+    "@tailwindcss/vite": "^4.1.11",
     "@vitejs/plugin-react": "^4.1.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
+    "i": "^0.3.7",
+    "npm": "^11.4.2",
     "tailwindcss": "^4.1.11",
     "vite": "^5.4.19"
   }
