--- a/client/package.json
+++ b/client/package.json
@@ -14,11 +14,14 @@
     "react-router-dom": "^6.20.1"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.1.11",
     "@tailwindcss/vite": "^4.1.11",
     "@vitejs/plugin-react": "^4.1.0",
+    "autoprefixer": "^10.4.21",
     "daisyui": "^5.0.46",
     "i": "^0.3.7",
     "npm": "^11.4.2",
+    "postcss": "^8.5.6",
     "tailwindcss": "^4.1.11",
     "vite": "^5.4.19"
   }
