--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node scripts/fixStatus.js && node server.js"
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
