--- a/server/package.json
+++ b/server/package.json
@@ -8,12 +8,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.0",
-    "multer": "1.4.5-lts.1",
+    "better-sqlite3": "^12.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.1",
     "morgan": "^1.10.0",
+    "multer": "1.4.5-lts.1",
     "sqlite3": "^5.1.6",
     "winston": "^3.10.0"
   }
