--- a/server/package.json
+++ b/server/package.json
@@ -4,18 +4,24 @@
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
-    "start": "node scripts/fixStatus.js && node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "bcrypt": "^5.1.0",
-    "better-sqlite3": "11.5.0",   
+    "archiver": "^6.0.2",
+    "better-sqlite3": "^11.5.0",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.2",
-    "jsonwebtoken": "^9.0.1",
-    "morgan": "^1.10.0",
-    "multer": "1.4.5-lts.1",
-    "sqlite3": "^5.1.6",
-    "winston": "^3.10.0"
+    "express": "^4.19.2",
+    "express-fileupload": "^1.4.0",            
+    "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.0"
+  },
+  "engines": {
+    "node": ">=18 <20"
   }
 }
