--- a/server/package.json
+++ b/server/package.json
@@ -1,27 +1,33 @@
 {
   "name": "device-box-tracker-server",
   "version": "1.0.0",
+  "description": "REST-API für das Box-Tracking-System",
   "type": "commonjs",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js"
   },
+  "engines": {
+    "node": ">=18"
+  },
   "dependencies": {
     "archiver": "^6.0.2",
-    "better-sqlite3": "^11.5.0",
-    "bcryptjs": "^2.4.3",
+    "bcrypt": "^5.1.1",
+    "better-sqlite3": "^12.2.0",
+    "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.6",
     "express": "^4.19.2",
-    "express-fileupload": "^1.4.0",
+    "express-fileupload": "^1.5.2",
+    "helmet": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.0"
+    "nodemon": "^3.1.10"
   },
-  "engines": {
-    "node": ">=18 <20"
-  }
+  "author": "",
+  "license": "MIT"
 }
