--- a/server/package.json
+++ b/server/package.json
@@ -9,12 +9,12 @@
     "dev": "nodemon server.js"
   },
   "engines": {
-    "node": ">=18"
+    "node": ">=18 <20"
   },
   "dependencies": {
     "archiver": "^6.0.2",
     "bcrypt": "^5.1.1",
-    "better-sqlite3": "^12.2.0",
+    "better-sqlite3": "^11.5.0",
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -28,6 +28,5 @@
   "devDependencies": {
     "nodemon": "^3.1.10"
   },
-  "author": "",
   "license": "MIT"
 }
