--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,7 @@
     "helmet": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5"
+    "multer": "^1.4.5-lts"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
