--- a/server/package.json
+++ b/server/package.json
@@ -18,13 +18,14 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
-    "dayjs": "^1.11.11",               
+    "dayjs": "^1.11.11",
     "dotenv": "^16.4.6",
     "express": "^4.19.2",
     "express-fileupload": "^1.5.2",
     "helmet": "^7.1.2",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1"          
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
